--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: rgb(63, 33, 90);
+  padding: 0px;
+  margin: 0px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+.main{
+  width: 900px;
+  background-color: white;
+  margin: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  display: flex;
+  padding: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div>h3{
+  font-size: 28px;
+}
+
+h5{
+  font-size: 20px;
+}
+.category{
+  padding: 10px;
+  flex-basis: 33.3333%;
+}
+.questions{
+  flex-basis: 66.6666%;
+  padding: 10px;
+}
+.question{
+  margin: 15px;
+  box-shadow: 5px 3px 3px grey;
+  border-radius: 4px;
+  border: solid 1px rgb(224, 220, 220);
+  padding: 20px 20px;
+
+}
+
+.button{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  color: red;
+  text-align: center;
+  font-size: 20px;
+
+}
+.button:hover{
+  transform: rotate(180deg);
+  transition: 0.5s;
+}
+@media screen and (max-width: 1100px) {
+  .main{
+    width: 80%;
+    display: block;
+  }
 }
